--- a/app/views/index.html
+++ b/app/views/index.html
@@ -67,7 +67,7 @@
     <script src="scripts/services/session.js"></script>
     <script src="scripts/services/user.js"></script>
     <script src="scripts/directives/mongooseError.js"></script>
-    <script src="scripts/services/twitter.js"></script>
+    <script src="scripts/services/tweet.js"></script>
     <!-- endbuild -->
 </body>
 </html>
