--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,6 @@
 /* Space out content a bit */
 body {
-  padding-top: 20px;
+/*  padding-top: 20px;*/
   padding-bottom: 20px;
 }
 
@@ -24,10 +24,15 @@ body {
   padding-bottom: 19px;
 }
 
+.nav > li > a{
+  margin: 5px 3px 5px 3px;
+}
+
 /* Custom page footer */
 .footer {
   padding-top: 19px;
   color: #777;
+  background-color: #f5f5f5;
   border-top: 1px solid #e5e5e5;
 }
 
