--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,8 @@
     <!-- Include nav bar partial
     ng-includes take an expression, so need to use string e.g. 'string' for angular to display -->
     <div ng-include="'views/partials/navbar.html'"></div>
+    <!-- only show if user is logged in -->    
+    <p ng-show="currentUser">Welcome {{ currentUser.name }}!</p>
     <!-- Main site / application content here -->
     <div class="container" ng-view=""></div>
     <!-- Footer -->
