update main tweet display to be fluid and support
responsive platform.  Showing more or less tweets per row depending on
size of devices.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,7 +30,7 @@
     <!-- only show if user is logged in -->    
     <p ng-show="currentUser">Welcome {{ currentUser.name }}!</p>
     <!-- Main site / application content here -->
-    <div class="container" ng-view=""></div>
+    <div class="container-fluid" ng-view=""></div>
     <!-- Footer -->
     <div ng-include="'views/partials/footer.html'"></div>
     
