--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,11 +1,15 @@
-<div class="panel panel-default" ng-repeat="tweet in tweets">
-	<div class="panel-heading">		
-		<img src="{{tweet.author_avatar}}" alt="twitter avatar image" />
-		{{tweet.author_name}}
-		({{tweet.author_username}})
+<div class="row">
+	<div ng-repeat="tweet in tweets" class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<img src="{{tweet.author_avatar}}" alt="twitter avatar image" />
+				{{tweet.author_name}}
+				({{tweet.author_username}})
+			</div>
+			<div class="panel-body">
+				{{tweet.text}}
+			</div>
+			<div class="panel-footer">{{tweet.created_at | date:'medium'}}</div>
+		</div>
 	</div>
-	<div class="panel-body">
-		{{tweet.text}}
-	</div>
-	<div class="panel-footer">{{tweet.created_at | date:'medium'}}</div>
 </div>
