--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -28,9 +28,11 @@ body {
   margin: 5px 3px 5px 3px;
 }
 
+
+
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
+  padding-top: 5px;
   color: #777;
   background-color: #f5f5f5;
   border-top: 1px solid #e5e5e5;
@@ -44,6 +46,10 @@ body {
 }
 .container-narrow > hr {
   margin: 30px 0;
+}
+
+.container{
+  margin-bottom: 20px;
 }
 
 /* Main marketing message and sign up button */
