--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,9 +28,9 @@
     ng-includes take an expression, so need to use string e.g. 'string' for angular to display -->
     <div ng-include="'views/partials/navbar.html'"></div>
     <!-- only show if user is logged in -->    
-    <p ng-show="currentUser">Welcome {{ currentUser.name }}!</p>
+    <div class="container-fluid"><p ng-show="currentUser">Welcome {{ currentUser.name }}!</p></div>
     <!-- Main site / application content here -->
-    <div class="container-fluid" ng-view=""></div>
+    <div ng-view=""></div>
     <!-- Footer -->
     <div ng-include="'views/partials/footer.html'"></div>
     
