--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-	<div class="container">
+	<div class="container-fluid">
 		<p>♥ from the Yeoman team</p>
 		<a href="#">home</a>
 		<!-- <a href="/#" class="pull-right">Back to Top</a>-->
