--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,7 @@
 body {
 /*  padding-top: 20px;*/
   padding-bottom: 20px;
+  background-color: #888;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
