--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -3,9 +3,13 @@
 		<div ng-repeat="tweet in tweets" class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<img src="{{tweet.author_avatar}}" alt="twitter avatar image" />
-					{{tweet.author_name}}
-					({{tweet.author_username}})
+					<div class="row">
+						<h4>
+							<img src="{{tweet.author_avatar}}" alt="twitter avatar image" />
+							{{tweet.author_name}}
+							<small>{{tweet.author_username}}</small>
+						</h4>
+					</div>
 				</div>
 				<div class="panel-body">
 					{{tweet.text}}
