--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,21 +1,15 @@
 <div class="container-fluid">
-	<div class="row">
-		<div ng-repeat="tweet in tweets" class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<div class="row">
-						<h4>
-							<img src="{{tweet.author_avatar}}" alt="twitter avatar image" />
-							{{tweet.author_name}}
-							<small>{{tweet.author_username}}</small>
-						</h4>
-					</div>
-				</div>
-				<div class="panel-body">
-					{{tweet.text}}
-				</div>
-				<div class="panel-footer">{{tweet.created_at | date:'medium'}}</div>
+	<div ng-repeat="tweet in tweets" class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+		<div class="panel panel-default">
+			<div class="panel-heading panel-tweet-heading">
+				<img src="{{tweet.author_avatar}}" alt="twitter avatar image" class="img-panel-heading img-circle pull-left" />
+				<h4>{{tweet.author_name}}</h4>
+				<small>@{{tweet.author_username}}</small>
 			</div>
+			<div class="panel-body panel-tweet-text">
+				<p>{{tweet.text}}</p>
+			</div>
+			<div class="panel-footer"><small>{{tweet.created_at | date:'medium'}}</small></div>
 		</div>
 	</div>
 </div>
