cleaned up footer to just show link to About page.

--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -1,7 +1,6 @@
 <footer class="footer">
 	<div class="container-fluid">
-		<p>♥ from the Yeoman team</p>
-		<a href="#">home</a>
+		<a href="/about" class="pull-right">About</a>
 		<!-- <a href="/#" class="pull-right">Back to Top</a>-->
 	</div>
 </footer>
