removed array for dependency injection.  Didn't realize
ngmin was already handling DI during minification.  See ngmin project.
https://github.com/btford/grunt-ngmin
now app runs with 'grunt serve:dist'
removed "views" folder in partials reference.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,13 +33,13 @@
     -->
     <!-- Include nav bar partial
     ng-includes take an expression, so need to use string e.g. 'string' for angular to display -->
-    <div ng-include="'views/partials/navbar.html'"></div>
+    <div ng-include="'/partials/navbar.html'"></div>
     <!-- only show if user is logged in -->    
     <div class="container-fluid"><p ng-show="currentUser" ng-cloak class="ng-cloak">Welcome {{ currentUser.name }}!</p></div>
     <!-- Main site / application content here -->
     <div ng-view=""></div>
     <!-- Footer -->
-    <div ng-include="'views/partials/footer.html'"></div>
+    <div ng-include="'/partials/footer.html'"></div>
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
