update main tweet view to display in descending order based on date.

--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-	<div ng-repeat="tweet in tweets" class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+	<div ng-repeat="tweet in tweets | orderBy:'created_at':true" class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
 		<div class="panel panel-default">
 			<div class="panel-heading panel-tweet-heading">
 				<img src="{{tweet.author_avatar}}" alt="twitter avatar image" class="img-panel-heading img-circle pull-left" />
