added sample d3 support to show metrics on twitter stream/search. added placeholder controller, routes, partial views to show working example. added D3 as both bower install or as an Angular service.  TODO: decide to either use the angular service approach or bower script reference.

--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -15,6 +15,8 @@
 			<li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
 				<a ng-href="{{item.link}}">{{item.title}}</a>
 			</li>
+			<li ng-class="{active: isActive('/metrics')}"><a href="/metrics">Metrics</a></li>			
+			<li ng-class="{active: isActive('/about')}"><a href="/about">About</a></li>
 <!-- Removed until user sign-up is supported
 			<li ng-hide="currentUser" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
 			<li ng-hide="currentUser" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
