--- a/app/views/index.html
+++ b/app/views/index.html
@@ -63,19 +63,23 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <!-- <script src="scripts/services/d3Service.js"></script>-->
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/navbar.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/signup.js"></script>
     <script src="scripts/controllers/settings.js"></script>
+    <script src="scripts/controllers/metrics.js"></script>
     <script src="scripts/services/auth.js"></script>
     <script src="scripts/services/session.js"></script>
     <script src="scripts/services/user.js"></script>
     <script src="scripts/directives/mongooseError.js"></script>
+    <script src="scripts/directives/d3Bars.js"></script>
     <script src="scripts/services/tweet.js"></script>
     <!-- endbuild -->
 </body>
