--- a/app/views/partials/metrics.html
+++ b/app/views/partials/metrics.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-sm-12">
 			<h1>Metrics</h1>
-			<d3-bars data="d3Data"></d3-bars>
+			<div d3-bars data="d3Data" class='panel panel-default'></div>
 
 			<div ng-repeat="row in d3Data">
 				<label>{{d3Data[$index].name}}</label>
