--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -17,10 +17,10 @@
 			</li>
 			<li ng-class="{active: isActive('/metrics')}"><a href="/metrics">Metrics</a></li>			
 			<li ng-class="{active: isActive('/about')}"><a href="/about">About</a></li>
-<!-- Removed until user sign-up is supported
-			<li ng-hide="currentUser" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
-			<li ng-hide="currentUser" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
-			<li ng-show="currentUser" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
+<!-- Removed until user sign-up is supported -->
+			<li ng-if="!currentUser" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
+			<li ng-if="!currentUser" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
+			<li ng-if="currentUser" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
 -->
 		</ul>
 	</div><!-- /.navbar-collapse -->
