--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- Spans For CSS/Media Qurey testing purposes -->
-    <!-- 
+    <!--
         <span class="visible-xs">SIZE XS - Landscape phones and down</span>
         <span class="visible-sm">SIZE SM - Landscape phone to portrait tablet</span>
         <span class="visible-md">SIZE MD - Portrait tablet to landscape and desktop - Portrait tablets and up</span>
@@ -34,13 +34,13 @@
     <!-- Include nav bar partial
     ng-includes take an expression, so need to use string e.g. 'string' for angular to display -->
     <div ng-include="'/partials/navbar.html'"></div>
-    <!-- only show if user is logged in -->    
+    <!-- only show if user is logged in -->
     <div class="container-fluid"><p ng-show="currentUser" ng-cloak class="ng-cloak">Welcome {{ currentUser.name }}!</p></div>
     <!-- Main site / application content here -->
     <div ng-view=""></div>
     <!-- Footer -->
     <div ng-include="'/partials/footer.html'"></div>
-    
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -81,7 +81,7 @@
     <script src="scripts/services/user.js"></script>
     <script src="scripts/directives/mongooseError.js"></script>
     <script src="scripts/directives/d3Bars.js"></script>
-    <script src="scripts/services/tweet.js"></script>
+    <script src="scripts/services/tweetService.js"></script>
     <!-- endbuild -->
 </body>
 </html>
